# l4d2-workshop-downloader

./: .gitignore  Cargo.toml  README.md  downloads.json
src/: logger.rs  main.rs  menu_import.rs  menu_manage.rs  menu_search.rs  menu_update.rs  meta.rs  util.rs  workshop.rs
