[package]
name = "l4d2-workshop-manager"
version = "0.1.0"
authors = ["Jackz <me@jackz.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
console = "0.14.1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
indicatif = "0.16.2"
tokio = { version = "1", features = ["rt", "time"] }
rayon = "1.5"
tinyfiledialogs = "3.0"
steamwebapi = { git = 'https://github.com/jackzmc/rs-steamwebapi' }
futures = "0.3.15"
bytes = "1"
webbrowser = "0.5.5"
clap = "3.0.0-beta.2"
regex = "1"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"